loopstudios layout completed

--- a/CSS-HTML-projects/loopstudios/index.html
+++ b/CSS-HTML-projects/loopstudios/index.html
@@ -24,16 +24,6 @@
 
     <!-- Javascript File -->
     <script defer src="./index.js"></script>
-
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <main class="container">
@@ -71,23 +61,27 @@
           <h1 class="hero__main--title">Immersive Experiences that deliver</h1>
         </div>
       </section>
-      <section class="summary">
-        <div class="summary__image">
-          <img
-            src="./images/desktop"
-            alt="A photo with a person using an virtual reality headset."
-            title="Virtual Reality Image"
-          />
-        </div>
+      <section class="company">
+        <div class="company-container">
+          <div class="company__image">
+            <img
+              src="./images/desktop/image-interactive.jpg"
+              alt="A photo with a person using an virtual reality headset."
+              title="Virtual Reality Image"
+            />
+          </div>
 
-        <div class="summary__content">
-          <h2 class="summary__content--title">The leader in interactive VR</h2>
-          <p class="summary__content--para">
-            Founded in 20111, Loopstudios has been producing world-class virtual
-            reality projects for some of the best companies around the globe.
-            Our award-winning creations have transformed businesses through
-            digital experiences that bind to their brand.
-          </p>
+          <div class="company__content">
+            <h2 class="company__content--title">
+              The leader in interactive VR
+            </h2>
+            <p class="company__content--para">
+              Founded in 20111, Loopstudios has been producing world-class
+              virtual reality projects for some of the best companies around the
+              globe. Our award-winning creations have transformed businesses
+              through digital experiences that bind to their brand.
+            </p>
+          </div>
         </div>
       </section>
 
@@ -138,70 +132,72 @@
 
       <!-- Footer Section -->
       <footer class="footer">
-        <!-- Footer content -->
-        <div class="footer__content">
-          <div class="footer__content--title">
-            <img
-              src="./images/logo.svg"
-              alt="Loopstudios logo in a white bold text"
-              title="Loopstudios"
-            />
-          </div>
+        <div class="footer-container">
+          <!-- Footer content -->
+          <div class="footer__content">
+            <div class="footer__content--title">
+              <img
+                src="./images/logo.svg"
+                alt="Loopstudios logo in a white bold text"
+                title="Loopstudios"
+              />
+            </div>
 
-          <div class="footer__content--menu">
-            <p>About</p>
-            <p>Careers</p>
-            <p>Events</p>
-            <p>Products</p>
-            <p>Support</p>
+            <div class="footer__content--menu">
+              <p>About</p>
+              <p>Careers</p>
+              <p>Events</p>
+              <p>Products</p>
+              <p>Support</p>
+            </div>
+          </div>
+          <!-- Footer Socials -->
+          <div class="footer__socials">
+            <ul class="footer__socials--icons">
+              <li>
+                <a href="#" target="_blank" aria-label="Facebook Icon Link">
+                  <img
+                    src="./images/icon-facebook.svg"
+                    alt="Facebook Logo with a white background and black text color"
+                    title="Facebook Link"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#" target="_blank" aria-label="Twitter Icon Link">
+                  <img
+                    src="./images/icon-twitter.svg"
+                    alt="Twitter Logo with a white background"
+                    title="Twitter Link"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#" target="_blank" aria-label="PInterest Icon Link">
+                  <img
+                    src="./images/icon-pinterest.svg"
+                    alt="PInterest Logo with a white background and black text color"
+                    title="PInterest Link"
+                  />
+                </a>
+              </li>
+              <li>
+                <a href="#" target="_blank" aria-label="Instagram Icon Link">
+                  <img
+                    src="./images/icon-pinterest.svg"
+                    alt="Instagram Logo with a white border, and black background color"
+                    title="Instagram Link"
+                  />
+                </a>
+              </li>
+            </ul>
+
+            <p class="footer__socials--copyright">
+              &copy; 2021 Loopstudios. All rights reserved.
+            </p>
           </div>
         </div>
 
-        <!-- Footer Socials -->
-        <div class="footer__socials">
-          <ul class="footer__socials--icons">
-            <li>
-              <a href="#" target="_blank" aria-label="Facebook Icon Link">
-                <img
-                  src="./images/icon-facebook.svg"
-                  alt="Facebook Logo with a white background and black text color"
-                  title="Facebook Link"
-                />
-              </a>
-            </li>
-            <li>
-              <a href="#" target="_blank" aria-label="Twitter Icon Link">
-                <img
-                  src="./images/icon-twitter.svg"
-                  alt="Twitter Logo with a white background"
-                  title="Twitter Link"
-                />
-              </a>
-            </li>
-            <li>
-              <a href="#" target="_blank" aria-label="PInterest Icon Link">
-                <img
-                  src="./images/icon-pinterest.svg"
-                  alt="PInterest Logo with a white background and black text color"
-                  title="PInterest Link"
-                />
-              </a>
-            </li>
-            <li>
-              <a href="#" target="_blank" aria-label="Instagram Icon Link">
-                <img
-                  src="./images/icon-pinterest.svg"
-                  alt="Instagram Logo with a white border, and black background color"
-                  title="Instagram Link"
-                />
-              </a>
-            </li>
-          </ul>
-
-          <p class="footer__social--copyright">
-            &copy; 2021 Loopstudios. All rights reserved.
-          </p>
-        </div>
         <div class="footer__attribution">
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
