completed the header and company section, not fully responsive yet

--- a/CSS-HTML-projects/loopstudios/index.html
+++ b/CSS-HTML-projects/loopstudios/index.html
@@ -33,6 +33,7 @@
         <header class="hero__header">
           <!-- Hero Hamburger Menu -->
           <div class="hero__header--hamburger hidden">
+            <img src="./images/icon-hamburger.svg" alt="" />
             <div></div>
           </div>
           <!-- Hero Header title -->
@@ -58,7 +59,11 @@
         </header>
 
         <div class="hero__main">
-          <h1 class="hero__main--title">Immersive Experiences that deliver</h1>
+          <div class="hero__main--content">
+            <h1 class="hero__main--title">
+              Immersive Experiences that deliver
+            </h1>
+          </div>
         </div>
       </section>
       <section class="company">
