completed the header navigation and fixing responsive across all screen sizes

--- a/CSS-HTML-projects/loopstudios/index.html
+++ b/CSS-HTML-projects/loopstudios/index.html
@@ -32,22 +32,24 @@
         <!-- Header -->
         <header class="hero__header">
           <!-- Hero Hamburger Menu -->
-          <div class="hero__header--hamburger hidden">
-            <img src="./images/icon-hamburger.svg" alt="" />
-            <div></div>
+          <div class="hero__header--hamburger">
+            <img
+              id="header__hamburger--icon"
+              src="./images/icon-hamburger.svg"
+              alt=""
+            />
           </div>
-          <!-- Hero Header title -->
-          <div class="hero__header--title">
-            <a href="#" aria-label="Loopstudios Logo">
-              <img
-                src="./images/logo.svg"
-                alt="Loopstudios Logo in a bold text"
-                title="Loopstudios Logo"
-              />
-            </a>
-          </div>
-
           <nav class="hero__header--nav">
+            <!-- Hero Header title -->
+            <div class="hero__header--nav__logo">
+              <a href="#" aria-label="Loopstudios Logo">
+                <img
+                  src="./images/logo.svg"
+                  alt="Loopstudios Logo in a bold text"
+                  title="Loopstudios Logo"
+                />
+              </a>
+            </div>
             <ul>
               <li><a href="#" aria-label="About Link">About</a></li>
               <li><a href="#" aria-label="Careers Link">Careers</a></li>
@@ -160,7 +162,11 @@
           <div class="footer__socials">
             <ul class="footer__socials--icons">
               <li>
-                <a href="#" target="_blank" aria-label="Facebook Icon Link">
+                <a
+                  href="https://facebook.com"
+                  target="_blank"
+                  aria-label="Facebook Icon Link"
+                >
                   <img
                     src="./images/icon-facebook.svg"
                     alt="Facebook Logo with a white background and black text color"
@@ -169,7 +175,11 @@
                 </a>
               </li>
               <li>
-                <a href="#" target="_blank" aria-label="Twitter Icon Link">
+                <a
+                  href="https://twitter.com"
+                  target="_blank"
+                  aria-label="Twitter Icon Link"
+                >
                   <img
                     src="./images/icon-twitter.svg"
                     alt="Twitter Logo with a white background"
@@ -178,7 +188,11 @@
                 </a>
               </li>
               <li>
-                <a href="#" target="_blank" aria-label="PInterest Icon Link">
+                <a
+                  href="https://pinterest.com"
+                  target="_blank"
+                  aria-label="PInterest Icon Link"
+                >
                   <img
                     src="./images/icon-pinterest.svg"
                     alt="PInterest Logo with a white background and black text color"
@@ -187,9 +201,13 @@
                 </a>
               </li>
               <li>
-                <a href="#" target="_blank" aria-label="Instagram Icon Link">
+                <a
+                  href="https://instagram.com"
+                  target="_blank"
+                  aria-label="Instagram Icon Link"
+                >
                   <img
-                    src="./images/icon-pinterest.svg"
+                    src="./images/icon-instagram.svg"
                     alt="Instagram Logo with a white border, and black background color"
                     title="Instagram Link"
                   />
