--- a/js-micro-components/pricing-component/index.html
+++ b/js-micro-components/pricing-component/index.html
@@ -29,66 +29,72 @@
   </head>
   <body>
     <main class="container">
-      <section class="section">
-        <div class="section__heading">
-          <h1 class="section__heading--title">Our Pricing</h1>
+      <header class="header">
+        <div class="header__heading">
+          <h1 class="header__heading--title">Our Pricing</h1>
         </div>
-        <div class="section__content">
-          <p class="section__content--para">Anually</p>
-          <div class="section__content--btn">Button</div>
-          <p class="section__content--para">Monthly</p>
+        <div class="header__content">
+          <p class="header__content--para">Annually</p>
+          <div class="header__content--btn">Button</div>
+          <p class="header__content--para">Monthly</p>
         </div>
-      </section>
+      </header>
 
       <section class="pricing">
-        <div class="pricing__card">
-          <div class="pricing__card--header">
-            <p>Basic</p>
-            <h2>&dollar;19.99</h2>
-            <h2>&dollar;199.99</h2>
-          </div>
-          <div class="pricing__card--details">
-            <p>500 GB Storage</p>
-            <p>2 Users Allowed</p>
-            <p>Send up to 3 GB</p>
-          </div>
+        <div class="pricing-container">
+          <div class="pricing__card">
+            <div class="pricing__card--header">
+              <p>Basic</p>
+              <h2>&dollar;19.99</h2>
+              <!-- <h2>&dollar;199.99</h2> -->
+            </div>
+            <div class="pricing__card--details">
+              <p>500 GB Storage</p>
+              <p>2 Users Allowed</p>
+              <p>Send up to 3 GB</p>
+            </div>
 
-          <div class="pricing__card--more">
-            <button class="" aria-label="Learn More Button">Learn more</button>
+            <div class="pricing__card--more">
+              <button class="" aria-label="Learn More Button">
+                Learn more
+              </button>
+            </div>
           </div>
-        </div>
+          <div class="pricing__card">
+            <div class="pricing__card--header">
+              <p>Professional</p>
+              <h2>&dollar;24.99</h2>
+              <!-- <h2>&dollar;249.99</h2> -->
+            </div>
+            <div class="pricing__card--details">
+              <p>1 TB Storage</p>
+              <p>5 Users Allowed</p>
+              <p>Send up to 10 GB</p>
+            </div>
 
-        <div class="pricing__card">
-          <div class="pricing__card--header">
-            <p>Professional</p>
-            <h2>&dollar;24.99</h2>
-            <h2>&dollar;249.99</h2>
+            <div class="pricing__card--more">
+              <button class="" aria-label="Learn More Button">
+                Learn more
+              </button>
+            </div>
           </div>
-          <div class="pricing__card--details">
-            <p>1 TB Storage</p>
-            <p>5 Users Allowed</p>
-            <p>Send up to 10 GB</p>
-          </div>
+          <div class="pricing__card">
+            <div class="pricing__card--header">
+              <p>Professional</p>
+              <h2>&dollar;39.99</h2>
+              <!-- <h2>&dollar;399.99</h2> -->
+            </div>
+            <div class="pricing__card--details">
+              <p>2 TB Storage</p>
+              <p>10 Users Allowed</p>
+              <p>Send up to 20 GB</p>
+            </div>
 
-          <div class="pricing__card--more">
-            <button class="" aria-label="Learn More Button">Learn more</button>
-          </div>
-        </div>
-
-        <div class="pricing__card">
-          <div class="pricing__card--header">
-            <p>Professional</p>
-            <h2>&dollar;39.99</h2>
-            <h2>&dollar;399.99</h2>
-          </div>
-          <div class="pricing__card--details">
-            <p>2 TB Storage</p>
-            <p>10 Users Allowed</p>
-            <p>Send up to 20 GB</p>
-          </div>
-
-          <div class="pricing__card--more">
-            <button class="" aria-label="Learn More Button">Learn more</button>
+            <div class="pricing__card--more">
+              <button class="" aria-label="Learn More Button">
+                Learn more
+              </button>
+            </div>
           </div>
         </div>
       </section>
