--- a/js-micro-components/pricing-component/index.html
+++ b/js-micro-components/pricing-component/index.html
@@ -45,7 +45,7 @@
           <div class="pricing__card">
             <div class="pricing__card--header">
               <p>Basic</p>
-              <h2>&dollar;19.99</h2>
+              <h2 class="pricing__card--header__active">&dollar;19.99</h2>
               <!-- <h2>&dollar;199.99</h2> -->
             </div>
             <div class="pricing__card--details">
@@ -63,7 +63,7 @@
           <div class="pricing__card">
             <div class="pricing__card--header">
               <p>Professional</p>
-              <h2>&dollar;24.99</h2>
+              <h2 class="pricing__card--header__active">&dollar;24.99</h2>
               <!-- <h2>&dollar;249.99</h2> -->
             </div>
             <div class="pricing__card--details">
@@ -81,7 +81,7 @@
           <div class="pricing__card">
             <div class="pricing__card--header">
               <p>Professional</p>
-              <h2>&dollar;39.99</h2>
+              <h2 class="pricing__card--header__active">&dollar;39.99</h2>
               <!-- <h2>&dollar;399.99</h2> -->
             </div>
             <div class="pricing__card--details">
