completed markup for social-media dashboard

--- a/js-micro-components/social-dashboard/index.html
+++ b/js-micro-components/social-dashboard/index.html
@@ -24,17 +24,311 @@
     <script defer src="./index.js"></script>
   </head>
   <body>
+    <main class="container">
+      <!-- dashboard-socials -->
+      <section class="socials">
+        <div class="socials__header">
+          <div class="socials__header--content">
+            <h1>Social Media Dashboard</h1>
+            <p>Total Followers: 23,004</p>
+          </div>
+          <div class="social__header--toggle">
+            <p>Dark Mode</p>
+            <div>Button</div>
+          </div>
+        </div>
+        <!-- Social Account Card -->
+        <div class="socials__card">
+          <div class="socials__card--user">
+            <img
+              src="./images/icon-facebook.svg"
+              alt="Facebook Logo"
+              title="Facebook Logo"
+            />
+            <p>@nathanf</p>
+          </div>
+          <div class="social__card--followers">
+            <h2>1987</h2>
+            <p>followers</p>
+          </div>
+          <div class="social__card--stat">
+            <img
+              src="./images/icon-up.svg"
+              alt="Icon pointing up indicating a follower count increase"
+              title="Follower Count Up"
+            />
+            <p>12 Today</p>
+          </div>
+        </div>
+
+        <div class="socials__card">
+          <div class="socials__card--user">
+            <img
+              src="./images/icon-twitter.svg"
+              alt="Twitter Logo"
+              title="Twitter Logo"
+            />
+            <p>@nathanf</p>
+          </div>
+          <div class="social__card--followers">
+            <h2>1044</h2>
+            <p>followers</p>
+          </div>
+          <div class="social__card--stat">
+            <img
+              src="./images/icon-up.svg"
+              alt="Icon pointing up indicating a follower count increase"
+              title="Follower Count Up"
+            />
+            <p>99 Today</p>
+          </div>
+        </div>
+
+        <div class="socials__card">
+          <div class="socials__card--user">
+            <img
+              src="./images/icon-facebook.svg"
+              alt="Instagram Logo"
+              title="Instagram Logo"
+            />
+            <p>@nathanf</p>
+          </div>
+          <div class="social__card--followers">
+            <h2>11k</h2>
+            <p>followers</p>
+          </div>
+          <div class="social__card--stat">
+            <img
+              src="./images/icon-up.svg"
+              alt="Icon pointing up indicating a follower count increase"
+              title="Follower Count Up"
+            />
+            <p>1099 Today</p>
+          </div>
+        </div>
+
+        <div class="socials__card">
+          <div class="socials__card--user">
+            <img
+              src="./images/icon-youtube.svg"
+              alt="Youtube Logo"
+              title="Youtube Logo"
+            />
+            <p>@nathanf</p>
+          </div>
+          <div class="social__card--followers">
+            <h2>8239</h2>
+            <p>followers</p>
+          </div>
+          <div class="social__card--stat">
+            <img
+              src="./images/icon-down.svg"
+              alt="Icon pointing down indicating a follower decrease"
+              title="Follower Count Down"
+            />
+            <p>144 Today</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- dashboard-overview -->
+      <section class="overview">
+        <div class="overview--header">
+          <h2>Overview - Today</h2>
+        </div>
+
+        <!-- Overview Cards -->
+        <div class="overview__card">
+          <div class="overview__header">
+            <h3>Page Views</h3>
+            <img
+              src="./images/icon-facebook.svg"
+              alt="Facebook Logo"
+              title="Facebook Logo"
+            />
+          </div>
+          <div class="overview__content">
+            <h3>87</h3>
+            <div class="overview__content--logo">
+              <img
+                src="./images/icon-up.svg"
+                alt="Icon pointing up indicating a follower count increase"
+                title="Follower Count Up"
+              />
+              <p>3 &percnt;</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="overview__card">
+          <div class="overview__header">
+            <h3>Likes</h3>
+            <img
+              src="./images/icon-facebook.svg"
+              alt="Facebook Logo"
+              title="Facebook Logo"
+            />
+          </div>
+          <div class="overview__content">
+            <h3>52</h3>
+            <div class="overview__content--logo">
+              <img
+                src="./images/icon-down.svg"
+                alt="Icon pointing down indicating a follower decrease"
+                title="Follower Count Down"
+              />
+              <p>2 &percnt;</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="overview__card">
+          <div class="overview__header">
+            <h3>Likes</h3>
+            <img
+              src="./images/icon-instagram.svg"
+              alt="Instagram Logo"
+              title="Instagram Logo"
+            />
+          </div>
+          <div class="overview__content">
+            <h3>5462</h3>
+            <div class="overview__content--logo">
+              <img
+                src="./images/icon-up.svg"
+                alt="Icon pointing up indicating a follower count increase"
+                title="Follower Count Up"
+              />
+              <p>2257 &percnt;</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="overview__card">
+          <div class="overview__header">
+            <h3>Profile Views</h3>
+            <img
+              src="./images/icon-instagram.svg"
+              alt="Instagram Logo"
+              title="Instagram Logo"
+            />
+          </div>
+          <div class="overview__content">
+            <h3>52k</h3>
+            <div class="overview__content--logo">
+              <img
+                src="./images/icon-up.svg"
+                alt="Icon pointing up indicating a follower count increase"
+                title="Follower Count Up"
+              />
+              <p>1375 &percnt;</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="overview__card">
+          <div class="overview__header">
+            <h3>Retweets</h3>
+            <img
+              src="./images/icon-twitter.svg"
+              alt="Twitter Logo"
+              title="Twitter Logo"
+            />
+          </div>
+          <div class="overview__content">
+            <h3>117</h3>
+            <div class="overview__content--logo">
+              <img
+                src="./images/icon-up.svg"
+                alt="Icon pointing up indicating a follower count increase"
+                title="Follower Count Up"
+              />
+              <p>303 &percnt;</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="overview__card">
+          <div class="overview__header">
+            <h3>Retweets</h3>
+            <img
+              src="./images/icon-twitter.svg"
+              alt="Twitter Logo"
+              title="Twitter Logo"
+            />
+          </div>
+          <div class="overview__content">
+            <h3>507</h3>
+            <div class="overview__content--logo">
+              <img
+                src="./images/icon-up.svg"
+                alt="Icon pointing up indicating a follower count increase"
+                title="Follower Count Up"
+              />
+              <p>553 &percnt;</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="overview__card">
+          <div class="overview__header">
+            <h3>Likes</h3>
+            <img
+              src="./images/icon-youtube.svg"
+              alt="Youtube Logo"
+              title="Youtube Logo"
+            />
+          </div>
+          <div class="overview__content">
+            <h3>107</h3>
+            <div class="overview__content--logo">
+              <img
+                src="./images/icon-down.svg"
+                alt="Icon pointing down indicating a follower decrease"
+                title="Follower Count Down"
+              />
+              <p>19 &percnt;</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="overview__card">
+          <div class="overview__header">
+            <h3>Total Views</h3>
+            <img
+              src="./images/icon-youtube.svg"
+              alt="Youtube Logo"
+              title="Youtube Logo"
+            />
+          </div>
+          <div class="overview__content">
+            <h3>1407</h3>
+            <div class="overview__content--logo">
+              <img
+                src="./images/icon-down.svg"
+                alt="Icon pointing down indicating a follower decrease"
+                title="Follower Count Down"
+              />
+              <p>12 &percnt;</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Footer -->
+      <footer class="footer">
+        <div class="footer__attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="https://github.com/soyed">Samuel Oyediran.</a>
+        </div>
+      </footer>
+    </main>
     Social Media Dashboard Total Followers: 23,004 Dark Mode @nathanf 1987
     Followers 12 Today @nathanf 1044 Followers 99 Today @realnathanf 11k
     Followers 1099 Today Nathan F. 8239 Subscribers 144 Today Overview - Today
     Page Views 87 3% Likes 52 2% Likes 5462 2257% Profile Views 52k 1375%
     Retweets 117 303% Likes 507 553% Likes 107 19% Total Views 1407 12%
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/soyed">Samuel Oyediran.</a>
-    </div>
   </body>
 </html>
