complete social media dashboard, dark mode functionality implemented as well

--- a/js-micro-components/social-dashboard/index.html
+++ b/js-micro-components/social-dashboard/index.html
@@ -34,9 +34,11 @@
               <h1>Social Media Dashboard</h1>
               <p>Total Followers: 23,004</p>
             </div>
-            <div class="social__header--toggle">
-              <p>Dark Mode</p>
-              <div>Button</div>
+            <div class="socials__header--toggle">
+              <p class="toggle--status">Dark Mode</p>
+              <div>
+                <input type="checkbox" name="theme" id="toggle--btn" />
+              </div>
             </div>
           </div>
           <!-- Social Account Card -->
@@ -59,7 +61,7 @@
                 alt="Icon pointing up indicating a follower count increase"
                 title="Follower Count Up"
               />
-              <p>12 Today</p>
+              <p class="socials__card--increase">12 Today</p>
             </div>
           </div>
 
@@ -82,18 +84,18 @@
                 alt="Icon pointing up indicating a follower count increase"
                 title="Follower Count Up"
               />
-              <p>99 Today</p>
+              <p class="socials__card--increase">99 Today</p>
             </div>
           </div>
 
           <div class="socials__card">
             <div class="socials__card--user">
               <img
-                src="./images/icon-facebook.svg"
+                src="./images/icon-instagram.svg"
                 alt="Instagram Logo"
                 title="Instagram Logo"
               />
-              <p>@nathanf</p>
+              <p>@realnathanf</p>
             </div>
             <div class="social__card--followers">
               <h2>11k</h2>
@@ -105,7 +107,7 @@
                 alt="Icon pointing up indicating a follower count increase"
                 title="Follower Count Up"
               />
-              <p>1099 Today</p>
+              <p class="socials__card--increase">1099 Today</p>
             </div>
           </div>
 
@@ -116,11 +118,11 @@
                 alt="Youtube Logo"
                 title="Youtube Logo"
               />
-              <p>@nathanf</p>
+              <p>Nathan F.</p>
             </div>
             <div class="social__card--followers">
               <h2>8239</h2>
-              <p>followers</p>
+              <p>subscribers</p>
             </div>
             <div class="social__card--stat">
               <img
@@ -128,7 +130,7 @@
                 alt="Icon pointing down indicating a follower decrease"
                 title="Follower Count Down"
               />
-              <p>144 Today</p>
+              <p class="socials__card--decrease">144 Today</p>
             </div>
           </div>
 
@@ -154,7 +156,7 @@
                   alt="Icon pointing up indicating a follower count increase"
                   title="Follower Count Up"
                 />
-                <p>3 &percnt;</p>
+                <p class="socials__card--increase">3&percnt;</p>
               </div>
             </div>
           </div>
@@ -176,7 +178,7 @@
                   alt="Icon pointing down indicating a follower decrease"
                   title="Follower Count Down"
                 />
-                <p>2 &percnt;</p>
+                <p class="socials__card--decrease">2&percnt;</p>
               </div>
             </div>
           </div>
@@ -198,7 +200,7 @@
                   alt="Icon pointing up indicating a follower count increase"
                   title="Follower Count Up"
                 />
-                <p>2257 &percnt;</p>
+                <p class="socials__card--increase">2257&percnt;</p>
               </div>
             </div>
           </div>
@@ -220,7 +222,7 @@
                   alt="Icon pointing up indicating a follower count increase"
                   title="Follower Count Up"
                 />
-                <p>1375 &percnt;</p>
+                <p class="socials__card--increase">1375&percnt;</p>
               </div>
             </div>
           </div>
@@ -242,7 +244,7 @@
                   alt="Icon pointing up indicating a follower count increase"
                   title="Follower Count Up"
                 />
-                <p>303 &percnt;</p>
+                <p class="socials__card--increase">303&percnt;</p>
               </div>
             </div>
           </div>
@@ -264,7 +266,7 @@
                   alt="Icon pointing up indicating a follower count increase"
                   title="Follower Count Up"
                 />
-                <p>553 &percnt;</p>
+                <p class="socials__card--increase">553&percnt;</p>
               </div>
             </div>
           </div>
@@ -286,7 +288,7 @@
                   alt="Icon pointing down indicating a follower decrease"
                   title="Follower Count Down"
                 />
-                <p>19 &percnt;</p>
+                <p class="socials__card--decrease">19&percnt;</p>
               </div>
             </div>
           </div>
@@ -308,7 +310,7 @@
                   alt="Icon pointing down indicating a follower decrease"
                   title="Follower Count Down"
                 />
-                <p>12 &percnt;</p>
+                <p class="socials__card--decrease">12&percnt;</p>
               </div>
             </div>
           </div>
