completed the header for insure landing page, responsive across all sreen sizes

--- a/CSS-HTML-projects/insure-landing-page/index.html
+++ b/CSS-HTML-projects/insure-landing-page/index.html
@@ -33,9 +33,9 @@
           <!-- Header Hamburger -->
           <div class="header__hamburger hidden">
             <img
-              class="hamburger--icon"
               src="./images/icon-hamburger.svg"
               alt=""
+              class="hamburger--icon"
             />
           </div>
 
@@ -54,7 +54,7 @@
               <li><a href="#" aria-label="Blog Link">blog</a></li>
               <li><a href="#" aria-label="Account Link">account</a></li>
               <li>
-                <a href="#" aria-label="Plans Link">Plan Links</a>
+                <a href="#" aria-label="Plans Link">View Plans</a>
               </li>
             </ul>
           </nav>
@@ -80,6 +80,7 @@
               src="./images/image-intro-desktop.jpg"
               alt="Insure Hero Image"
               aria-labelledby="hero__intro-image"
+              class="hidden"
             />
             <img
               src="./images/image-intro-mobile.jpg"
