completed company motto, responsive across all screen sizes

--- a/CSS-HTML-projects/insure-landing-page/index.html
+++ b/CSS-HTML-projects/insure-landing-page/index.html
@@ -97,7 +97,7 @@
       <section class="company">
         <div class="company-container">
           <div class="company__header">
-            <h2 class="company__header--title"></h2>
+            <h2 class="company__header--title">We're different</h2>
           </div>
 
           <div class="company__motto company__motto--process">
@@ -148,6 +148,15 @@
                 Our plans aren't full of conditions and clauses to prevent
                 payouts. We make sure you're covered when you need it.
               </p>
+            </div>
+          </div>
+
+          <div class="company__work">
+            <h2 class="company__work--title">
+              Find out more about how we work
+            </h2>
+            <div class="company__work--more">
+              <a aria-label="How we work Link">How we work</a>
             </div>
           </div>
         </div>
