completed toggle button for pricing component

--- a/js-micro-components/social-dashboard/index.html
+++ b/js-micro-components/social-dashboard/index.html
@@ -37,7 +37,13 @@
             <div class="socials__header--toggle">
               <p class="toggle--status">Dark Mode</p>
               <div>
-                <input type="checkbox" name="theme" id="toggle--btn" />
+                <input
+                  type="checkbox"
+                  name="theme"
+                  id="toggle--btn"
+                  class="toggle--input"
+                />
+                <span class="toggle--slider"></span>
               </div>
             </div>
           </div>
