--- a/js-micro-components/pricing-component/index.html
+++ b/js-micro-components/pricing-component/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="header__content">
           <p class="header__content--para">Annually</p>
-          <div class="header__content--btn">Button</div>
+          <div class="header__content--btn"></div>
           <p class="header__content--para">Monthly</p>
         </div>
       </header>
