completed toggle button for social media dashboard

--- a/js-micro-components/social-dashboard/index.html
+++ b/js-micro-components/social-dashboard/index.html
@@ -26,7 +26,6 @@
   <body>
     <main class="container">
       <!-- dashboard-socials -->
-      <!-- TODO: Bind Socials and Overview into one grid = >Easier to control across all the screen sizes -->
       <section class="socials">
         <div class="socials-container">
           <div class="socials__header">
@@ -37,18 +36,12 @@
             <div class="socials__header--toggle">
               <p class="toggle--status">Dark Mode</p>
               <div>
-                <input
-                  type="checkbox"
-                  name="theme"
-                  id="toggle--btn"
-                  class="toggle--input"
-                />
-                <span class="toggle--slider"></span>
+                <input type="checkbox" name="theme" id="toggle--btn" />
               </div>
             </div>
           </div>
           <!-- Social Account Card -->
-          <div class="socials__card">
+          <div class="socials__card socials__card--account-1">
             <div class="socials__card--user">
               <img
                 src="./images/icon-facebook.svg"
@@ -71,7 +64,7 @@
             </div>
           </div>
 
-          <div class="socials__card">
+          <div class="socials__card socials__card--account-2">
             <div class="socials__card--user">
               <img
                 src="./images/icon-twitter.svg"
@@ -94,7 +87,7 @@
             </div>
           </div>
 
-          <div class="socials__card">
+          <div class="socials__card socials__card--account-3">
             <div class="socials__card--user">
               <img
                 src="./images/icon-instagram.svg"
@@ -117,7 +110,7 @@
             </div>
           </div>
 
-          <div class="socials__card">
+          <div class="socials__card socials__card--account-4">
             <div class="socials__card--user">
               <img
                 src="./images/icon-youtube.svg"
