completed the footer section of the landing page, fully responsive across all screens

--- a/CSS-HTML-projects/insure-landing-page/index.html
+++ b/CSS-HTML-projects/insure-landing-page/index.html
@@ -253,7 +253,7 @@
               </div>
             </div>
             <div class="footer__content--others footer__content--column">
-              <p>others</p>
+              <p>reviews</p>
               <div>
                 <p>careers</p>
                 <p>press</p>
