completing the landing page for insure company

--- a/CSS-HTML-projects/insure-landing-page/index.html
+++ b/CSS-HTML-projects/insure-landing-page/index.html
@@ -70,8 +70,14 @@
               expertise and technology to help you find the plan that’s right
               for you. Ensure you and your loved ones are protected.
             </p>
+
             <div class="hero__content--plans">
-              <button class="view-plans--btn">View plans</button>
+              <a
+                class="hero__content--plans"
+                href="#"
+                aria-label="View Plans Link"
+                >View plans</a
+              >
             </div>
           </div>
 
@@ -80,7 +86,7 @@
               src="./images/image-intro-desktop.jpg"
               alt="Insure Hero Image"
               aria-labelledby="hero__intro-image"
-              class="hidden"
+              class=""
             />
             <img
               src="./images/image-intro-mobile.jpg"
