completed priced toggling component - toggle button

--- a/CSS-HTML-projects/insure-landing-page/index.html
+++ b/CSS-HTML-projects/insure-landing-page/index.html
@@ -86,14 +86,14 @@
               src="./images/image-intro-desktop.jpg"
               alt="Insure Hero Image"
               aria-labelledby="hero__intro-image"
-              class=""
+              class="hero__image--desktop"
             />
             <img
               src="./images/image-intro-mobile.jpg"
               alt=""
               aria-labelledby="hero__intro-image"
               title="A photo containing a family of four."
-              class="hidden"
+              class="hero__image--mobile"
             />
             <p class="hero__intro-image hidden">Insure Hero Image</p>
           </div>
