--- a/js-micro-components/pricing-component/index.html
+++ b/js-micro-components/pricing-component/index.html
@@ -35,7 +35,12 @@
         </div>
         <div class="header__content">
           <p class="header__content--para">Annually</p>
-          <div class="header__content--btn"></div>
+          <div class="header__content--btn">
+            <label class="header__toggle--btn">
+              <input type="checkbox" class="toggle--btn" />
+              <span class="slider"></span>
+            </label>
+          </div>
           <p class="header__content--para">Monthly</p>
         </div>
       </header>
@@ -46,7 +51,6 @@
             <div class="pricing__card--header">
               <p>Basic</p>
               <h2 class="pricing__card--header__active">&dollar;19.99</h2>
-              <!-- <h2>&dollar;199.99</h2> -->
             </div>
             <div class="pricing__card--details">
               <p>500 GB Storage</p>
@@ -64,7 +68,6 @@
             <div class="pricing__card--header">
               <p>Professional</p>
               <h2 class="pricing__card--header__active">&dollar;24.99</h2>
-              <!-- <h2>&dollar;249.99</h2> -->
             </div>
             <div class="pricing__card--details">
               <p>1 TB Storage</p>
@@ -82,7 +85,6 @@
             <div class="pricing__card--header">
               <p>Professional</p>
               <h2 class="pricing__card--header__active">&dollar;39.99</h2>
-              <!-- <h2>&dollar;399.99</h2> -->
             </div>
             <div class="pricing__card--details">
               <p>2 TB Storage</p>
