hamburger memu completed, missing functionality

--- a/js-micro-components/navbar-studio/01.navbar/index.html
+++ b/js-micro-components/navbar-studio/01.navbar/index.html
@@ -7,7 +7,7 @@
     <title>Navbar Studio | 01.Navbar</title>
 
     <link rel="stylesheet" href="./style.css" />
-    <script defer src="./index.html"></script>
+    <script defer src="./index.js"></script>
   </head>
   <body>
     <main>
