completed navbar for insure landing page

--- a/CSS-HTML-projects/insure-landing-page/index.html
+++ b/CSS-HTML-projects/insure-landing-page/index.html
@@ -31,24 +31,20 @@
       <header class="header">
         <div class="header-container">
           <!-- Header Hamburger -->
-          <div class="header__hamburger hidden">
+          <div class="header__hamburger">
+            <img src="./images/icon-hamburger.svg" alt="" />
+          </div>
+
+          <div class="header__nav--logo">
             <img
-              src="./images/icon-hamburger.svg"
-              alt=""
-              class="hamburger--icon"
+              src="./images/logo.svg"
+              alt="Insure Logo"
+              title="Insure Logo"
             />
           </div>
 
           <!-- Header Nav -->
           <nav class="header__nav">
-            <div class="header__nav--logo">
-              <img
-                src="./images/logo.svg"
-                alt="Insure Logo"
-                title="Insure Logo"
-              />
-            </div>
-
             <ul class="header__nav--menu">
               <li><a href="#" aria-label="How We Work Link">how we work</a></li>
               <li><a href="#" aria-label="Blog Link">blog</a></li>
